--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,28 @@
+.surround {
+    margin: 1.875rem 0 0 3.4375rem;
+    font-family: "Courier New", Courier, monospace;
+    font-weight: lighter;
+    height: 100vh;
+}
+
+.neon {
+    color: #fff;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #FF1177, 0 0 70px #FF1177, 0 0 80px #FF1177, 0 0 100px #FF1177, 0 0 150px #FF1177;
+}
+.weather p {
+    margin: 0;
+}
+p {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
+
+
+
+
+
+
+
 body {
     margin: 0;
     padding: 0;
